# TobaccoBot

./: .env.example  .gitignore  CLAUDE.md  README.md  TECH_DEBT.md  pyproject.toml  requirements-dev.txt
data/: catalog_sample.json  check_results.json  sample_list.txt  tobacco_words.txt  user_list.txt
data/prompts/: chat_system.txt  clarify_system.txt  mix_system.txt  normalize_system.txt  refine_system.txt  suggest_system.txt
data/vocab/: brands.json  brands.manual.json  flavors.json  flavors.manual.json
deploy/: install-systemd.sh  tbottabak.service
scripts/: analyze_logs.py  build_vocab_from_catalog.py  check_list.py  check_session.py  check_telegram.py  compare_sites.py  fetch_catalog.py  login_oshisha.py  parse_query.py  run_bot.py  search_flavor.py  update_taxonomy.py
src/bot/: __init__.py  action_context.py  app.py  cart_log.py  catalog_background.py  catalog_search.py  config.py  formatters.py  handlers.py  inline_keyboards.py  keyboards.py  llm_gate.py  menu_state.py  messages.py  night_digest.py  progress.py  query_logger.py  search_filters.py  search_log.py  service_async.py  vocab_patch.py  weight_groups.py
src/oshisha/: __init__.py  auth.py  cart.py  catalog.py  catalog_cache.py  catalog_snapshot.py  (+8 more)
tests/: conftest.py  test_bot_scenarios.py  test_cart.py  test_catalog.py  test_catalog_cache.py  test_catalog_check_snapshot.py  test_catalog_snapshot.py  test_check_flavor_evidence.py  test_llm_json.py  test_queries_for_catalog.py  test_query_parser.py  test_routing_list_parse.py  test_shops_compare.py  test_vocabulary.py  test_weight_groups.py
(+27 files in other folders)
