[project]
name = "tbottabak"
version = "0.1.0"
description = "Telegram bot for oshisha.cc tobacco search and cart"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
socks = ["httpx[socks]>=0.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
